--- a/.github/workflows/update-copyright-years-in-license-file.yml
+++ b/.github/workflows/update-copyright-years-in-license-file.yml
@@ -13,5 +13,6 @@ jobs:
           fetch-depth: 0
       - uses: FantasticFiasco/action-update-license-year@v2
         with:
+          prTitle: 'Update license copyright year'
           commitTitle: 'Update license copyright year'
           token: ${{ secrets.GITHUB_TOKEN }}
